fixed alignment for bars on Chart

--- a/client/src/layouts/Layout.scss
+++ b/client/src/layouts/Layout.scss
@@ -20,3 +20,7 @@
   grid-column: 2; 
   overflow: hidden;
 }
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
